# mcp-jp

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  LICENSE  README.md  glama.json  requirements-dev.txt
.github/ISSUE_TEMPLATE/: config.yml  connector-request.yml
.github/workflows/: ci.yml  connector-request-ack.yml  discover-scan.yml  discover-watch.yml  semgrep.yml
activecampaign/: pyproject.toml
airtable/: README.md
akashi/: Dockerfile  README.md  pyproject.toml
akashi/src/akashi_mcp/: server.py
archive/: README.md
archive/activecampaign/: README.md
archive/activecampaign/src/activecampaign_mcp/: server.py
archive/airtable/: pyproject.toml
archive/asana/: README.md  pyproject.toml
archive/box/: README.md
archive/brevo/: pyproject.toml
archive/calendly/: README.md  pyproject.toml
archive/chatwork/: README.md  pyproject.toml
archive/circleci/: README.md  pyproject.toml
archive/clickup/: README.md
archive/dropbox/: README.md
archive/freee/: pyproject.toml
archive/freee/src/: server.py
archive/gitlab/: README.md
archive/heroku/: README.md  pyproject.toml
archive/hubspot/: pyproject.toml
archive/jira/: pyproject.toml
archive/kintone/: pyproject.toml
archive/mailchimp/: pyproject.toml
archive/mfcloud/: pyproject.toml
archive/mfcloud/src/: server.py
archive/notion/: README.md
archive/pagerduty/: README.md  pyproject.toml
archive/sansan/: README.md
archive/sentry/: README.md  pyproject.toml
archive/shopify/: README.md  pyproject.toml
archive/square/: README.md  pyproject.toml
archive/stripe/: README.md  pyproject.toml
archive/vercel/: README.md  pyproject.toml
archive/zendesk/: pyproject.toml
archive/zoom/: pyproject.toml
backlog/: README.md  pyproject.toml
backlog/src/backlog_mcp/: server.py
base-ec/: Dockerfile  README.md  pyproject.toml
base-ec/src/base_ec_mcp/: _http.py  server.py
board/: Dockerfile  README.md  pyproject.toml
board/src/board_mcp/: server.py
box/: pyproject.toml
box/src/box_mcp/: server.py
brevo/: README.md
chatwork/src/chatwork_mcp/: server.py
clickup/: pyproject.toml
cloudflare/: README.md  pyproject.toml
cloudsign/: Dockerfile  README.md  pyproject.toml
cloudsign/src/cloudsign_mcp/: server.py
confluence/: README.md  pyproject.toml
datadog/: README.md  pyproject.toml
docs/: connector-candidates.md  strategy.md
dropbox/: pyproject.toml
esa/: Dockerfile  README.md  pyproject.toml
esa/src/esa_mcp/: server.py
freee/: README.md
freee/src/: server.py
freshdesk/: Dockerfile  README.md  pyproject.toml
freshdesk/src/freshdesk_mcp/: server.py
garoon/: Dockerfile  README.md  pyproject.toml
garoon/src/garoon_mcp/: server.py
gitlab/: pyproject.toml
harvest/: Dockerfile  README.md  pyproject.toml
harvest/src/harvest_mcp/: server.py
herp/: Dockerfile  README.md  pyproject.toml
herp/src/herp_mcp/: server.py
hrmos-kintai/: Dockerfile  README.md  pyproject.toml
hrmos-kintai/src/hrmos_kintai_mcp/: server.py
hubspot/: README.md
hubspot/src/hubspot_mcp/: server.py
intercom/: Dockerfile  README.md  pyproject.toml
intercom/src/intercom_mcp/: server.py
invox/: Dockerfile  README.md  pyproject.toml
invox/src/invox_mcp/: server.py
jira/: README.md
jobcan-workflow/: Dockerfile  README.md  pyproject.toml
jobcan-workflow/src/jobcan_workflow_mcp/: server.py
jooto/: Dockerfile  README.md  pyproject.toml
jooto/src/jooto_mcp/: server.py
kaonavi/: Dockerfile  README.md  pyproject.toml
kaonavi/src/kaonavi_mcp/: server.py
karte/: Dockerfile  README.md  pyproject.toml
karte/src/karte_mcp/: server.py
kingtime/: Dockerfile  README.md  pyproject.toml
kingtime/src/kingtime_mcp/: server.py
kintone/: README.md
kintone/src/: server.py
lineworks/: Dockerfile  README.md  pyproject.toml
lineworks/src/lineworks_mcp/: server.py
lstep/: Dockerfile  README.md  pyproject.toml
lstep/src/: server.py
lstep/src/lstep_mcp/: server.py
mailchimp/: README.md
makeleaps/: Dockerfile  README.md  pyproject.toml
makeleaps/src/makeleaps_mcp/: server.py
mazrica/: Dockerfile  README.md  pyproject.toml
mazrica/src/mazrica_mcp/: server.py
mfcloud/: README.md
mfcloud/src/: server.py
misoca/: Dockerfile  README.md  pyproject.toml
misoca/src/misoca_mcp/: server.py
notepm/: Dockerfile  README.md  pyproject.toml
notepm/src/notepm_mcp/: server.py
notes/: candidates_state.json
notion/: pyproject.toml
payjp/: Dockerfile  README.md  pyproject.toml
payjp/src/payjp_mcp/: server.py
pipedrive/: Dockerfile  README.md  pyproject.toml
pipedrive/src/pipedrive_mcp/: server.py
relation/: Dockerfile  README.md  pyproject.toml
relation/src/relation_mcp/: server.py
sansan/: pyproject.toml
scripts/: discover_candidates.py
sendgrid/: Dockerfile  README.md  pyproject.toml
sendgrid/src/sendgrid_mcp/: server.py
shopify/src/shopify_mcp/: server.py
smaregi/: Dockerfile  README.md  pyproject.toml
smaregi/src/smaregi_mcp/: server.py
smarthr/: Dockerfile  README.md  pyproject.toml
smarthr/src/smarthr_mcp/: server.py
square/src/square_mcp/: server.py
talentio/: Dockerfile  README.md  pyproject.toml
talentio/src/talentio_mcp/: server.py
tests/: README.md  _discovery.py  conftest.py  test_api_sunset_check.py  test_error_handling.py  test_live_smoke.py  test_official_mcp_check.py  test_structure.py
toggl/: Dockerfile  README.md  pyproject.toml
toggl/src/toggl_mcp/: server.py
tools/: README.md  api_sunset_state.json  check_api_sunset.py  check_official_mcp.py  official_mcp_state.json
trello/: Dockerfile  README.md  pyproject.toml
trello/src/trello_mcp/: server.py
twilio/: README.md  pyproject.toml
twilio/src/twilio_mcp/: server.py
typeform/: Dockerfile  README.md  pyproject.toml
typeform/src/typeform_mcp/: server.py
vercel/src/vercel_mcp/: server.py
yappli-crm/: Dockerfile  README.md  pyproject.toml
yappli-crm/src/yappli_crm_mcp/: server.py
zendesk/: README.md
zendesk/src/zendesk_mcp/: server.py
zoom/: README.md
zoom/src/zoom_mcp/: server.py
(+19 files in other folders)
