[project]
name = "activecampaign-mcp"
version = "0.1.0"
description = "MCP server for ActiveCampaign（マーケティングオートメーション・CRM）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
activecampaign-mcp = "activecampaign_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/activecampaign_mcp"]
