[project]
name = "akashi-mcp"
version = "0.1.0"
description = "MCP server for AKASHI / マネーフォワード クラウド勤怠Plus（クラウド勤怠管理）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
akashi-mcp = "akashi_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/akashi_mcp"]
