[project]
name = "base-ec-mcp"
version = "0.1.0"
description = "MCP server for BASE（ECプラットフォーム）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
base-ec-mcp = "base_ec_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/base_ec_mcp"]
