[project]
name = "board-mcp"
version = "0.1.0"
description = "MCP server for board（クラウド業務・経営管理システム）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
board-mcp = "board_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/board_mcp"]
