[project]
name = "clickup-mcp"
version = "0.1.0"
description = "MCP server for ClickUp（プロジェクト管理・タスク管理）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
clickup-mcp = "clickup_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clickup_mcp"]
