[project]
name = "cloudflare-mcp"
version = "0.1.0"
description = "MCP server for Cloudflare（CDN・DNS・セキュリティ管理）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
cloudflare-mcp = "cloudflare_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudflare_mcp"]
