[project]
name = "datadog-mcp"
version = "0.1.0"
description = "MCP server for Datadog（クラウド監視・モニタリング）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
datadog-mcp = "datadog_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datadog_mcp"]
