[project]
name = "esa-mcp"
version = "0.1.0"
description = "MCP server for esa（チームナレッジ共有）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
esa-mcp = "esa_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/esa_mcp"]
