[project]
name = "garoon-mcp"
version = "0.1.0"
description = "MCP server for Garoon（サイボウズ グループウェア）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
garoon-mcp = "garoon_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/garoon_mcp"]
