[project]
name = "gitlab-mcp"
version = "0.1.0"
description = "MCP server for GitLab（ソースコード管理・CI/CD）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
gitlab-mcp = "gitlab_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gitlab_mcp"]
