[project]
name = "harvest-mcp"
version = "0.1.0"
description = "MCP server for Harvest（時間計測・請求書・プロジェクト管理）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
harvest-mcp = "harvest_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harvest_mcp"]
