[project]
name = "herp-mcp"
version = "0.1.0"
description = "MCP server for HERP Hire（採用管理システム）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
herp-mcp = "herp_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/herp_mcp"]
