[project]
name = "invox-mcp"
version = "0.1.0"
description = "MCP server for invox 受取請求書・発行請求書・経費精算"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
invox-mcp = "invox_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invox_mcp"]
