[project]
name = "jobcan-workflow-mcp"
version = "0.1.0"
description = "MCP server for ジョブカン経費精算/ワークフロー"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
jobcan-workflow-mcp = "jobcan_workflow_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobcan_workflow_mcp"]
