[project]
name = "karte-mcp"
version = "0.1.0"
description = "MCP server for KARTE（顧客データ・MA・パーソナライゼーション）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
karte-mcp = "karte_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/karte_mcp"]
