[project]
name = "kingtime-mcp"
version = "0.1.0"
description = "MCP server for KING OF TIME 勤怠管理"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
kingtime-mcp = "kingtime_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kingtime_mcp"]
