[project]
name = "lstep-mcp"
version = "0.1.0"
description = "MCP server for Lステップ (L-Step) LINE Marketing Automation"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
lstep-mcp = "lstep_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lstep_mcp"]
