[project]
name = "makeleaps-mcp"
version = "0.1.0"
description = "MCP server for MakeLeaps（請求書・見積書クラウドサービス）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
makeleaps-mcp = "makeleaps_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/makeleaps_mcp"]
