[project]
name = "mazrica-mcp"
version = "0.1.0"
description = "MCP server for Mazrica Sales（Senses）SFA"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mazrica-mcp = "mazrica_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mazrica_mcp"]
