[project]
name = "notepm-mcp"
version = "0.1.0"
description = "MCP server for NotePM（社内wiki・ナレッジ共有・マニュアル作成ツール）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
notepm-mcp = "notepm_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notepm_mcp"]
