[project]
name = "notion-mcp"
version = "0.1.0"
description = "MCP server for Notion（ナレッジ管理・プロジェクト管理）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
notion-mcp = "notion_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notion_mcp"]
