[project]
name = "payjp-mcp"
version = "0.1.0"
description = "MCP server for PAY.JP（日本向け決済・課金サービス）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
payjp-mcp = "payjp_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/payjp_mcp"]
