[project]
name = "relation-mcp"
version = "0.1.0"
description = "MCP server for Re:lation（メール共有・カスタマーサポートシステム）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
relation-mcp = "relation_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/relation_mcp"]
