[project]
name = "sansan-mcp"
version = "0.1.0"
description = "MCP server for Sansan（名刺管理・人脈管理）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
sansan-mcp = "sansan_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sansan_mcp"]
