[project]
name = "sendgrid-mcp"
version = "0.1.0"
description = "MCP server for SendGrid（メール送信・マーケティング）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
sendgrid-mcp = "sendgrid_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sendgrid_mcp"]
